# contextualize

./: .gitignore  DEPENDENCIES.txt  README.md  debug_llm.py  implementation.md  package-lock.json  package.json  pyproject.toml  vertex_test.py
contextualize_docs/: __init__.py  __main__.py  cli.py  config.py  logging_config.py
contextualize_docs/fetcher/: __init__.py  chunker.py  deps_reader.py  doc_fetcher.py  input_builder.py
contextualize_docs/models/: __init__.py  input_models.py  output_models.py
contextualize_docs/pipeline/: __init__.py  card_generator.py  deduper.py  grouper.py  orchestrator.py  preprocessor.py  validator.py  writer.py
contextualize_docs/prompts/: __init__.py  card_prompt.py  system_prompt.py
contextualize_docs/providers/: base.py  gemini_provider.py  openai_provider.py  vercel_gateway_provider.py
contextualize_docs/tests/: conftest.py  test_cli.py  test_e2e.py  test_grouper.py  test_input_models.py  test_integration.py  test_output_models.py  test_preprocessor.py  test_validator.py  test_writer.py
contextualize_docs/tests/fixtures/: sample_input.json
contextualize_docs/utils/: __init__.py  hashing.py  normalization.py  text.py
